[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/bgMeteor.gd" type="Script" id=1]
[ext_resource path="res://resources/textures/smoke_01.png" type="Texture" id=2]
[ext_resource path="res://resources/textures/smallerMoon.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.857143, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 0.01
scale_random = 0.02
color_ramp = SubResource( 2 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -4, -8, 4, -8, 8, -4, 8, 4, 4, 8, -4, 8, -8, 4, -8, -4 )

[node name="bgMeteor" type="Sprite"]
modulate = Color( 1, 1, 1, 0.4 )
script = ExtResource( 1 )

[node name="particles2D" type="Particles2D" parent="."]
amount = 128
lifetime = 6.0
local_coords = false
draw_order = 1
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="bgMeteor" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 3 )

[node name="lightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="tween" type="Tween" parent="."]
[connection signal="screen_entered" from="visibilityNotifier2D" to="." method="_on_visibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="visibilityNotifier2D" to="." method="_on_visibilityNotifier2D_screen_exited"]
